# kaos-engine

./: .gitmodules  NOISE_GENERATION_TECHNIQUES.md  README.md  meson.build  meson.options
.github/workflows/: build.yml
scripts/: install-vst3.py  plugin-symbols-vst3.version
src/: meson.build
src/effects/compressor/: compressor_processor.cpp  compressor_processor.h  meson.build
src/effects/delay/: delay_processor.cpp  delay_processor.h  meson.build
src/effects/distortion/: distortion_processor.cpp  distortion_processor.h  meson.build
src/effects/eq/: eq_processor.cpp  eq_processor.h  meson.build
src/effects/filter/: filter_processor.cpp  filter_processor.h  meson.build
src/effects/frequency_shifter/: frequency_shifter_processor.cpp  frequency_shifter_processor.h  meson.build
src/effects/gate/: gate_processor.cpp  gate_processor.h  meson.build
src/effects/looper/: looper_processor.cpp  looper_processor.h  meson.build
src/effects/modulator/: meson.build  modulator_processor.cpp  modulator_processor.h
src/effects/noise/: meson.build  noise_processor.cpp  noise_processor.h
src/effects/pitch_shifter/: meson.build  pitch_shifter_processor.cpp  pitch_shifter_processor.h
src/effects/reverb/: meson.build  reverb_processor.cpp  reverb_processor.h
src/effects/spectrogram/: meson.build  spectrogram_processor.cpp  spectrogram_processor.h
src/framework/envelope_follower/: envelope_follower_processor.cpp  envelope_follower_processor.h  meson.build
src/framework/lfo/: lfo_processor.cpp  lfo_processor.h  meson.build
src/framework/stochastic/: meson.build  stochastic_processor.cpp  stochastic_processor.h
src/plugin/: compressor_editor.cpp  compressor_editor.h  compressor_plugin.cpp  compressor_plugin.h  delay_editor.cpp  delay_editor.h  delay_plugin.cpp  delay_plugin.h  distortion_editor.cpp  distortion_editor.h  distortion_plugin.cpp  distortion_plugin.h  envelope_follower_editor.cpp  envelope_follower_editor.h  envelope_follower_plugin.cpp  envelope_follower_plugin.h  eq_editor.cpp  eq_editor.h  eq_plugin.cpp  eq_plugin.h  filter_editor.cpp  filter_editor.h  filter_plugin.cpp  filter_plugin.h  frequency_shifter_editor.cpp  frequency_shifter_editor.h  frequency_shifter_plugin.cpp  frequency_shifter_plugin.h  gate_editor.cpp  gate_editor.h  gate_plugin.cpp  gate_plugin.h  lfo_editor.cpp  lfo_editor.h  lfo_plugin.cpp  lfo_plugin.h  look_and_feel.cpp  look_and_feel.h  looper_editor.cpp  looper_editor.h  (+27 more)
src/standalone/: meson.build
