subdir('framework/lfo')
subdir('framework/stochastic')
subdir('framework/envelope_follower')
subdir('effects/distortion')
subdir('effects/filter')
subdir('effects/delay')
subdir('effects/reverb')
subdir('effects/pitch_shifter')
subdir('effects/modulator')
subdir('effects/frequency_shifter')
subdir('effects/eq')
subdir('effects/compressor')
subdir('effects/gate')
subdir('effects/noise')
subdir('plugin')
subdir('standalone')
